--- a/code_generator/views/ir_model.xml
+++ b/code_generator/views/ir_model.xml
@@ -18,13 +18,50 @@
             <notebook position="before">
                 <group name="code_generator_module" string="Code Generator Module">
                     <group>
-                        <field name="rec_name" class="rec_name_input"/>
+                        <field name="rec_name" class="rec_name_input" attrs="{'readonly': [('id', '!=', False)]}" />
+
                         <field name="m2o_module" options="{'no_create': True, 'no_edit': True}"
-                               class="m2o_module_input"/>
-                        <field name="m2o_inherit_py_class" options="{'no_create': True, 'no_edit': True}"/>
+                               class="m2o_module_input"
+                               invisible="context.get('hide_m2o_module', False)" />
+
+                        <field name="m2o_inherit_py_class" options="{'no_create': True, 'no_edit': True}" attrs="{'readonly': [('id', '!=', False)]}" />
                         <field name="m2o_inherit_model" options="{'no_create': True, 'no_edit': True}"
-                               class="m2o_inherit_model_input"/>
+                               class="m2o_inherit_model_input" attrs="{'readonly': [('id', '!=', False)]}" />
                         <field name="nomenclator" class="nomenclator_input"/>
+                    </group>
+                    <group attrs="{'invisible': [('id', '=', False)]}">
+                        <field name="o2m_serverconstrains">
+                            <form string="Server Constrain">
+                                <group>
+                                    <group>
+                                        <field name="constrained" />
+                                    </group>
+                                </group>
+                                <group>
+                                    <field name="txt_code" widget="ace" options="{'mode': 'python'}" />
+                                </group>
+                                <div groups="base.group_no_one">
+                                    <h3>How to define a server constrain</h3>
+                                    <p>Server constrains are defined with the fields <strong>Constrained</strong> and <strong>Code</strong>.</p>
+                                    <p>The field <strong>Constrained</strong> lists the fields that the server constrain will check. It is a comma-separated list of field names, like <code>name, size</code>.</p>
+                                    <p>The field <strong>Code</strong> is the Python code to use as the server constrain.</p>
+                                    <pre>
+if self.name == 'test':
+    raise ValidationError('The name value must not be test.')
+                                    </pre>
+                                </div>
+                                <p>The only predefined variables are</p>
+                                <ul>
+                                    <li><code>self</code> (the record)</li>
+                                    <li><code>datetime</code> (Python module)</li>
+                                    <li><code>dateutil</code> (Python module)</li>
+                                    <li><code>time</code> (Python module)</li>
+                                    <li><code>re</code> (Python Regular Expression module)</li>
+                                    <li><code>ValidationError</code> (Odoo Exception Class)</li>
+                                </ul>
+                                <p>Other features are accessible through <code>self</code>, like <code>self.env</code>, etc.</p>
+                            </form>
+                        </field>
                     </group>
                 </group>
             </notebook>
