--- a/code_generator/views/ir_model.xml
+++ b/code_generator/views/ir_model.xml
@@ -1,144 +1,169 @@
 <?xml version= "1.0" ?>
 <odoo>
 
-    <record model="ir.ui.view" id="ir_model_form_inherited">
-        <field name="name">ir.model.form</field>
-        <field name="model">ir.model</field>
-        <field name="inherit_id" ref="base.view_model_form"/>
-        <field name="arch" type="xml">
+  <record model="ir.ui.view" id="ir_model_form_inherited">
+    <field name="name">ir.model.form</field>
+    <field name="model">ir.model</field>
+    <field name="inherit_id" ref="base.view_model_form"/>
+    <field name="arch" type="xml">
 
-            <field name="name" position="attributes">
-                <attribute name="class">name_input</attribute>
-            </field>
+      <field name="name" position="attributes">
+        <attribute name="class">name_input</attribute>
+      </field>
 
-            <field name="model" position="attributes">
-                <attribute name="class">model_input</attribute>
-            </field>
+      <field name="model" position="attributes">
+        <attribute name="class">model_input</attribute>
+      </field>
 
-            <notebook position="before">
-                <group name="code_generator_module" string="Code Generator Module">
-                    <group>
-                        <field name="rec_name" class="rec_name_input" attrs="{'readonly': [('id', '!=', False)]}" />
+      <notebook position="before">
+        <group name="code_generator_module" string="Code Generator Module">
+          <group>
+            <field name="rec_name" class="rec_name_input" attrs="{'readonly': [('id', '!=', False)]}"/>
 
-                        <field name="m2o_module" options="{'no_create': True, 'no_edit': True}"
-                               class="m2o_module_input"
-                               invisible="context.get('hide_m2o_module', False)" />
+            <field name="m2o_module" options="{'no_create': True, 'no_edit': True}"
+                   class="m2o_module_input"
+                   invisible="context.get('hide_m2o_module', False)"/>
 
-                        <field name="m2o_inherit_py_class" options="{'no_create': True, 'no_edit': True}" attrs="{'readonly': [('id', '!=', False)]}" />
-                        <field name="m2o_inherit_model" options="{'no_create': True, 'no_edit': True}"
-                               class="m2o_inherit_model_input" attrs="{'readonly': [('id', '!=', False)]}" />
-                        <field name="nomenclator" class="nomenclator_input"/>
-                    </group>
-                    <group attrs="{'invisible': [('id', '=', False)]}">
-                        <field name="o2m_serverconstrains">
-                            <form string="Server Constrain">
-                                <group>
-                                    <group>
-                                        <field name="constrained" />
-                                    </group>
-                                </group>
-                                <group>
-                                    <field name="txt_code" widget="ace" options="{'mode': 'python'}" />
-                                </group>
-                                <div groups="base.group_no_one">
-                                    <h3>How to define a server constrain</h3>
-                                    <p>Server constrains are defined with the fields <strong>Constrained</strong> and <strong>Code</strong>.</p>
-                                    <p>The field <strong>Constrained</strong> lists the fields that the server constrain will check. It is a comma-separated list of field names, like <code>name, size</code>.</p>
-                                    <p>The field <strong>Code</strong> is the Python code to use as the server constrain.</p>
-                                    <pre>
-if self.name == 'test':
-    raise ValidationError('The name value must not be test.')
-                                    </pre>
-                                </div>
-                                <p>The only predefined variables are</p>
-                                <ul>
-                                    <li><code>self</code> (the record)</li>
-                                    <li><code>datetime</code> (Python module)</li>
-                                    <li><code>dateutil</code> (Python module)</li>
-                                    <li><code>time</code> (Python module)</li>
-                                    <li><code>re</code> (Python Regular Expression module)</li>
-                                    <li><code>ValidationError</code> (Odoo Exception Class)</li>
-                                </ul>
-                                <p>Other features are accessible through <code>self</code>, like <code>self.env</code>, etc.</p>
-                            </form>
-                        </field>
-                    </group>
+            <field name="m2o_inherit_py_class" options="{'no_create': True, 'no_edit': True}"
+                   attrs="{'readonly': [('id', '!=', False)]}"/>
+            <field name="m2o_inherit_model" options="{'no_create': True, 'no_edit': True}"
+                   class="m2o_inherit_model_input" attrs="{'readonly': [('id', '!=', False)]}"/>
+            <field name="nomenclator" class="nomenclator_input"/>
+          </group>
+          <group attrs="{'invisible': [('id', '=', False)]}">
+            <field name="o2m_server_constrains">
+              <form string="Server Constrain">
+                <group>
+                  <group>
+                    <field name="constrained"/>
+                  </group>
                 </group>
-            </notebook>
-
-        </field>
-    </record>
-
-    <record model="ir.ui.view" id="ir_model_constraint_form_inherited">
-        <field name="name">ir.model.constraint.form</field>
-        <field name="model">ir.model.constraint</field>
-        <field name="inherit_id" ref="base.view_model_constraint_form"/>
-        <field name="arch" type="xml">
-
-            <group position="after">
-                <group name="code_generator_module" string="Code Generator Module">
-                    <group>
-                        <field name="definition"/>
-                        <field name="model_state" invisible="1" />
-                        <field name="message" attrs="{'required': [('type', '==', 'u'), ('model_state', '==', 'manual')]}" />
-                    </group>
+                <group>
+                  <field name="txt_code" widget="ace" options="{'mode': 'python'}"/>
                 </group>
-            </group>
-
-        </field>
-    </record>
-
-    <record model="ir.ui.view" id="ir_model_constraint_tree_inherited">
-        <field name="name">ir.model.constraint.tree</field>
-        <field name="model">ir.model.constraint</field>
-        <field name="inherit_id" ref="base.view_model_constraint_list"/>
-        <field name="arch" type="xml">
-            <field name="name" position="after">
-                <field name="definition"/>
+                <div groups="base.group_no_one">
+                  <h3>How to define a server constrain</h3>
+                  <p>Server constrains are defined with the fields <strong>Constrained</strong> and <strong>
+                    Code</strong>.
+                  </p>
+                  <p>The field <strong>Constrained</strong> lists the fields that the server constrain will check. It is
+                    a comma-separated list of field names, like <code>name, size</code>.
+                  </p>
+                  <p>The field <strong>Code</strong> is the Python code to use as the server constrain.
+                  </p>
+                  <pre>
+                    if self.name == 'test':
+                    raise ValidationError('The name value must not be test.')
+                  </pre>
+                </div>
+                <p>The only predefined variables are</p>
+                <ul>
+                  <li>
+                    <code>self</code>
+                    (the record)
+                  </li>
+                  <li>
+                    <code>datetime</code>
+                    (Python module)
+                  </li>
+                  <li>
+                    <code>dateutil</code>
+                    (Python module)
+                  </li>
+                  <li>
+                    <code>time</code>
+                    (Python module)
+                  </li>
+                  <li>
+                    <code>re</code>
+                    (Python Regular Expression module)
+                  </li>
+                  <li>
+                    <code>ValidationError</code>
+                    (Odoo Exception Class)
+                  </li>
+                </ul>
+                <p>Other features are accessible through <code>self</code>, like <code>self.env</code>, etc.
+                </p>
+              </form>
             </field>
-        </field>
-    </record>
+          </group>
+        </group>
+      </notebook>
 
-    <record model="ir.ui.view" id="ir_access_view_tree_inherited">
-        <field name="model">ir.model.access</field>
-        <field name="inherit_id" ref="base.ir_access_view_tree" />
-        <field name="arch" type="xml">
+    </field>
+  </record>
 
-            <tree position="attributes">
-                <attribute name="editable"></attribute>
-            </tree>
+  <record model="ir.ui.view" id="ir_model_constraint_form_inherited">
+    <field name="name">ir.model.constraint.form</field>
+    <field name="model">ir.model.constraint</field>
+    <field name="inherit_id" ref="base.view_model_constraint_form"/>
+    <field name="arch" type="xml">
 
-        </field>
-    </record>
+      <group position="after">
+        <group name="code_generator_module" string="Code Generator Module">
+          <group>
+            <field name="definition"/>
+            <field name="model_state" invisible="1"/>
+            <field name="message" attrs="{'required': [('type', '==', 'u'), ('model_state', '==', 'manual')]}"/>
+          </group>
+        </group>
+      </group>
 
-    <record model="ir.ui.view" id="ir_access_view_form_inherited">
-        <field name="model">ir.model.access</field>
-        <field name="inherit_id" ref="base.ir_access_view_form" />
-        <field name="arch" type="xml">
+    </field>
+  </record>
 
-            <field name="name" position="attributes">
-                <attribute name="class">name_input</attribute>
-            </field>
-            <field name="model_id" position="attributes">
-                <attribute name="class">m2o_model_input</attribute>
-            </field>
-            <field name="group_id" position="attributes">
-                <attribute name="class">group_input</attribute>
-            </field>
-            <field name="perm_read" position="attributes">
-                <attribute name="class">perm_read_input</attribute>
-            </field>
-            <field name="perm_write" position="attributes">
-                <attribute name="class">perm_write_input</attribute>
-            </field>
-            <field name="perm_create" position="attributes">
-                <attribute name="class">perm_create_input</attribute>
-            </field>
-            <field name="perm_unlink" position="attributes">
-                <attribute name="class">perm_unlink_input</attribute>
-            </field>
+  <record model="ir.ui.view" id="ir_model_constraint_tree_inherited">
+    <field name="name">ir.model.constraint.tree</field>
+    <field name="model">ir.model.constraint</field>
+    <field name="inherit_id" ref="base.view_model_constraint_list"/>
+    <field name="arch" type="xml">
+      <field name="name" position="after">
+        <field name="definition"/>
+      </field>
+    </field>
+  </record>
 
-        </field>
-    </record>
+  <record model="ir.ui.view" id="ir_access_view_tree_inherited">
+    <field name="model">ir.model.access</field>
+    <field name="inherit_id" ref="base.ir_access_view_tree"/>
+    <field name="arch" type="xml">
+
+      <tree position="attributes">
+        <attribute name="editable"></attribute>
+      </tree>
+
+    </field>
+  </record>
+
+  <record model="ir.ui.view" id="ir_access_view_form_inherited">
+    <field name="model">ir.model.access</field>
+    <field name="inherit_id" ref="base.ir_access_view_form"/>
+    <field name="arch" type="xml">
+
+      <field name="name" position="attributes">
+        <attribute name="class">name_input</attribute>
+      </field>
+      <field name="model_id" position="attributes">
+        <attribute name="class">m2o_model_input</attribute>
+      </field>
+      <field name="group_id" position="attributes">
+        <attribute name="class">group_input</attribute>
+      </field>
+      <field name="perm_read" position="attributes">
+        <attribute name="class">perm_read_input</attribute>
+      </field>
+      <field name="perm_write" position="attributes">
+        <attribute name="class">perm_write_input</attribute>
+      </field>
+      <field name="perm_create" position="attributes">
+        <attribute name="class">perm_create_input</attribute>
+      </field>
+      <field name="perm_unlink" position="attributes">
+        <attribute name="class">perm_unlink_input</attribute>
+      </field>
+
+    </field>
+  </record>
 
 </odoo>
