[ADD] code_generator_db_servers: support primary_key in fields

--- a/code_generator_db_servers/views/code_generator.xml
+++ b/code_generator_db_servers/views/code_generator.xml
@@ -21,6 +21,11 @@
                             <field name="password" password="True" />
                         </group>
                     </group>
+                    <group>
+                        <group>
+                            <field name="accept_primary_key"/>
+                        </group>
+                    </group>
                 </sheet>
             </form>
         </field>
