[FIX] code_generator: sync_code will sync on directory - reduce error of erase directory - Force default licence to AGPL-3 - Move required field to not developer mode - Rename button action generate MVC

--- a/code_generator/wizards/code_generator_add_model_wizard.xml
+++ b/code_generator/wizards/code_generator_add_model_wizard.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <record id="code_generator_add_model_action" model="ir.actions.act_window">
-    <field name="name">Add model</field>
+    <field name="name">Model</field>
     <field name="type">ir.actions.act_window</field>
     <field name="res_model">code.generator.add.model.wizard</field>
     <field name="view_mode">form</field>
