[ADD] code_generator: support controller - Syntax fix - field have white/black list in view - support form view - Rename button with simple name

--- a/code_generator/views/code_generator.xml
+++ b/code_generator/views/code_generator.xml
@@ -37,6 +37,11 @@
                     type="action"
                     class="btn btn-primary"
                     context="{'default_code_generator_id': id, 'default_user_id': uid}"/>
+            <button name="%(code_generator_add_controller_action)d"
+                    string="Controller"
+                    type="action"
+                    class="btn btn-primary"
+                    context="{'default_code_generator_id': id, 'default_user_id': uid}"/>
           </div>
         </div>
       </xpath>
