[FIX] code_generator_hook: generate hook from a demo code generator - Add constant hook in begin of hook file - Support generate hook demo

--- a/code_generator_hook/views/code_generator.xml
+++ b/code_generator_hook/views/code_generator.xml
@@ -8,7 +8,7 @@
     <field name="arch" type="xml">
       <xpath expr="//page[@name='Elements']" position="after">
         <page string="Hook" name="Hook">
-          <group string="pre_init_hook">
+          <group name="pre_init_hook" string="pre_init_hook">
             <group>
               <field name="pre_init_hook_show"/>
             </group>
@@ -16,30 +16,39 @@
               <field name="pre_init_hook_feature_general_conf"/>
             </group>
           </group>
+
           <field name="pre_init_hook_code" attrs="{'invisible': [('pre_init_hook_show', '=', False)]}" nolabel="1"
                  widget="ace" options="{'mode': 'python'}"/>
 
-          <group string="post_init_hook">
+          <group name="post_init_hook" string="post_init_hook">
             <group>
               <field name="post_init_hook_show"/>
             </group>
             <group string="Feature" attrs="{'invisible': [('post_init_hook_show', '=', False)]}">
               <field name="post_init_hook_feature_general_conf"/>
+              <field name="post_init_hook_feature_code_generator"/>
             </group>
           </group>
           <field name="post_init_hook_code" attrs="{'invisible': [('post_init_hook_show', '=', False)]}" nolabel="1"
                  widget="ace" options="{'mode': 'python'}"/>
 
-          <group string="uninstall_hook">
+          <group name="uninstall_hook" string="uninstall_hook">
             <group>
               <field name="uninstall_hook_show"/>
             </group>
             <group string="Feature" attrs="{'invisible': [('uninstall_hook_show', '=', False)]}">
               <field name="uninstall_hook_feature_general_conf"/>
+              <field name="uninstall_hook_feature_code_generator"/>
             </group>
           </group>
           <field name="uninstall_hook_code" attrs="{'invisible': [('uninstall_hook_show', '=', False)]}" nolabel="1"
                  widget="ace" options="{'mode': 'python'}"/>
+
+          <group name="extra" string="Extra">
+            <group>
+              <field name="hook_constant_code" nolabel="1" widget="ace" options="{'mode': 'python'}"/>
+            </group>
+          </group>
         </page>
       </xpath>
     </field>
