[UPD] format and run generate module on all code_generator_demo

--- a/demo_internal/views/demo_model_2_internal.xml
+++ b/demo_internal/views/demo_model_2_internal.xml
@@ -1,20 +1,38 @@
 <?xml version= "1.0" encoding="utf-8"?>
 <odoo>
 
-  <record model="ir.ui.view" id="demo_model_2_internal_treeview">
+  <record model="ir.ui.view" id="demo_model_2_internal_view_form">
+    <field name="name">demo_model_2_internal_form</field>
+    <field name="model">demo.model_2.internal</field>
+    <field name="arch" type="xml">
+      <form string="Titre">
+        <sheet>
+          <group>
+            <field name="model_1"/>
+          </group>
+          <group>
+            <field name="name"/>
+          </group>
+        </sheet>
+      </form>
+    </field>
+  </record>
+
+  <record model="ir.ui.view" id="demo_model_2_internal_view_tree">
     <field name="name">demo_model_2_internal_tree</field>
     <field name="model">demo.model_2.internal</field>
     <field name="arch" type="xml">
-      <tree editable="top">
+      <tree>
         <field name="model_1"/>
         <field name="name"/>
       </tree>
     </field>
   </record>
 
-  <record model="ir.actions.act_window" id="demo_model_2_internal_demo_model_2_internal_action_vi_actionwindow">
+  <record model="ir.actions.act_window" id="demo_model_2_internal_demo_model_2_internal_action_v_action_window">
     <field name="name">demo_model_2_internal_action_view</field>
     <field name="res_model">demo.model_2.internal</field>
+    <field name="view_mode">list,form</field>
   </record>
 
 </odoo>
